# CogniLoop

./: .dockerignore  .env.example  .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  install.sh  pyproject.toml
.github/workflows/: docker.yml
backend/: __init__.py  alembic.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 10_add_circle_profiles.py  11_add_cascade_bank_questions_acquisitions.py  12_add_exam_templates.py  13_drop_bank_questions.py  14_rag_overhaul.py  15_add_course_tables.py  16_add_course_node_key_points.py  17_add_course_theme.py  18_add_knowledge_chat.py  19_add_knowledge_chat_trace.py  1_initial_v2_schema.py  20260109_001_initial.py  20260211_002_add_system_config.py  20260213_003_add_captcha_store.py  20260214_004_add_course_description.py  20260215_005_add_plaza_fields.py  20260221_006_add_exam_paper.py  20260225_007_add_trace_log.py  5_add_quiz_sharing.py  (+8 more)
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_auth.py  test_circle.py  test_knowledge_chat.py  test_quiz.py
docker-cogniloop/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: gaokao-setup.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
renderer/: .dockerignore  Dockerfile  main.py  package-lock.json  package.json  requirements.txt  tsconfig.json  tsconfig.server.json
renderer/src/: index.tsx  render.ts  server.ts  types.ts
renderer/templates/: BULLET_POINTS.html  COMPARISON.html  CONCEPT_EXPLAIN.html  DIAGRAM_TEXT.html  QUOTE_HIGHLIGHT.html  SUMMARY.html  TITLE_SLIDE.html  slide_base.html
scripts/: create_admin.py
(+423 files in other folders)
